--- a/sass/layout/_about-us.scss
+++ b/sass/layout/_about-us.scss
@@ -1,39 +1,36 @@
 .about-us {
   padding: 94px 0px;
-}
 
-.about-us-list {
-  display: flex;
-}
+  &-list {
+    display: flex;
 
-.about-us-list-item {
-  width: 270px;
-}
-.about-us-list-item:not(:last-child) {
-  margin-right: 30px;
-}
+    &-item {
+      width: 270px;
+      &:not(:last-child) {
+        margin-right: 30px;
+      }
+    }
+  }
+  &-discription {
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 1.142;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: $primary-text-color;
+    margin-bottom: 10px;
+  }
+  &-details {
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 1.714;
+    letter-spacing: 0.03em;
 
-.about-us-discription {
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 1.142;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--primary-text-color);
-  margin-bottom: 10px;
-}
-
-.about-us-details {
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 1.714;
-  letter-spacing: 0.03em;
-
-  color: var(--discription-text-color);
-}
-
-.about-us-item-svg {
-  padding: 25px 100px;
-  margin-bottom: 30px;
-  background: #f5f4fa;
+    color: $discription-text-color;
+  }
+  &-item-svg {
+    padding: 25px 100px;
+    margin-bottom: 30px;
+    background: #f5f4fa;
+  }
 }
