--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,12 +1,3 @@
-:root {
-  --primary-text-color: #212121;
-  --discription-text-color: #757575;
-  --accent-color: #2196f3;
-  --text-color: #ffffff;
-  --footer-background: #2f303a;
-  --icons-links-color: #afb1b8;
-}
-
 *,
 *::before,
 *::after {
@@ -35,29 +26,45 @@ img {
   display: block;
 }
 
+.container {
+  width: 1200px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
+.header .container {
+  display: flex;
+  align-self: center;
+}
+
+.footer .container {
+  display: flex;
+  align-items: baseline;
+}
+
 .navigation-list-link:hover,
 .navigation-list-link:focus {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 .email-link:hover,
 .email-link:focus {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 .tel-link:hover,
 .tel-link:focus {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 .footer-email-link:hover,
 .footer-email-link:focus {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 .footer-tel-link:hover,
 .footer-tel-link:focus {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 .logo {
@@ -66,7 +73,7 @@ img {
   font-size: 26px;
   line-height: 1.192;
   letter-spacing: 0.03em;
-  color: var(--accent-color);
+  color: #2196f3;
   margin-right: 93px;
 }
 
@@ -89,16 +96,16 @@ img {
   font-size: 14px;
   line-height: 1.142;
   letter-spacing: 0.02em;
-  color: var(--primary-text-color);
+  color: #212121;
 }
 
 .current {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 .current {
   position: relative;
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 .current::after {
@@ -109,7 +116,7 @@ img {
   width: 100%;
   height: 4px;
   content: '';
-  background-color: var(--accent-color);
+  background-color: #2196f3;
   border-radius: 2px;
 }
 
@@ -118,14 +125,14 @@ img {
   font-size: 14px;
   line-height: 1.142;
   letter-spacing: 0.02em;
-  color: var(--primary-text-color);
+  color: #212121;
   transition-property: all;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .email-link:hover .email-link-svg {
-  fill: var(--accent-color);
+  fill: #2196f3;
 }
 
 .email-link-svg {
@@ -140,14 +147,14 @@ img {
   font-size: 14px;
   line-height: 1.333;
   letter-spacing: 0.02em;
-  color: var(--primary-text-color);
+  color: #212121;
   transition-property: all;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .tel-link:hover .tel-link-svg {
-  fill: var(--accent-color);
+  fill: #2196f3;
 }
 
 .tel-link-svg {
@@ -157,18 +164,8 @@ img {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* .container {
-  width: 1200px;
-  padding: 0 15px;
-  margin: 0 auto;
-} */
 .header {
   border-bottom: 1px solid #ececec;
-}
-
-.header .container {
-  display: flex;
-  align-self: center;
 }
 
 .navigation {
@@ -246,7 +243,7 @@ img {
 .modal-btn-portfolio:hover,
 .modal-btn-portfolio:focus {
   color: #ffffff;
-  background-color: var(--accent-color);
+  background-color: #2196f3;
 }
 
 .portfolio-item {
@@ -317,11 +314,6 @@ img {
   background-color: #212121;
 }
 
-.footer .container {
-  display: flex;
-  align-items: baseline;
-}
-
 .footer-logo {
   display: inline-block;
   margin-bottom: 20px;
@@ -330,7 +322,7 @@ img {
   font-size: 26px;
   line-height: 1.192;
   letter-spacing: 0.03em;
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 .footer-list {
@@ -346,18 +338,18 @@ img {
 
 .city-adress {
   margin-bottom: 9px;
-  color: var(--text-color);
+  color: #ffffff;
 }
 
 .footer-email-link {
-  color: var(--text-color);
+  color: #ffffff;
   transition-property: all;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-tel-link {
-  color: var(--text-color);
+  color: #ffffff;
   transition-property: all;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -372,12 +364,12 @@ img {
 
 .footer-links:hover,
 .footer-links:focus {
-  background-color: var(--accent-color);
+  background-color: #2196f3;
 }
 
 .footer-links:hover .footer-links-svg,
 .footer-links:focus .footer-links-svg {
-  background-color: var(--accent-color);
+  background-color: #2196f3;
 }
 
 .footer-links {
@@ -405,7 +397,7 @@ img {
 }
 
 .footer-links-svg {
-  fill: var(--text-color);
+  fill: #ffffff;
   transition-property: all;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -465,7 +457,7 @@ img {
 }
 
 .footer-submit-btn:hover {
-  background-color: var(--accent-color);
+  background-color: #2196f3;
   transition-property: all;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
