--- a/sass/components/_social-links-hover.scss
+++ b/sass/components/_social-links-hover.scss
@@ -1,23 +1,23 @@
 .navigation-list-link:hover,
 .navigation-list-link:focus {
-  color: var(--accent-color);
+  color: $accent-color;
 }
 
 .email-link:hover,
 .email-link:focus {
-  color: var(--accent-color);
+  color: $accent-color;
 }
 
 .tel-link:hover,
 .tel-link:focus {
-  color: var(--accent-color);
+  color: $accent-color;
 }
 .footer-email-link:hover,
 .footer-email-link:focus {
-  color: var(--accent-color);
+  color: $accent-color;
 }
 
 .footer-tel-link:hover,
 .footer-tel-link:focus {
-  color: var(--accent-color);
+  color: $accent-color;
 }
