--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,50 +2,53 @@
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: #212121;
-}
 
-.footer .container {
-  display: flex;
-  align-items: baseline;
-}
+  &-logo {
+    display: inline-block;
+    margin-bottom: 20px;
+    font-family: Raleway;
+    font-weight: bold;
+    font-size: 26px;
+    line-height: 1.192;
+    letter-spacing: 0.03em;
+    color: $accent-color;
+  }
 
-.footer-logo {
-  display: inline-block;
-  margin-bottom: 20px;
-  font-family: Raleway;
-  font-weight: bold;
-  font-size: 26px;
-  line-height: 1.192;
-  letter-spacing: 0.03em;
-  color: var(--accent-color);
-}
-.footer-list {
-  padding-right: 70px;
-  font-size: 14px;
-  line-height: 1.714;
-  letter-spacing: 0.03em;
-}
+  &-list {
+    padding-right: 70px;
+    font-size: 14px;
+    line-height: 1.714;
+    letter-spacing: 0.03em;
+  }
 
-.footer-email {
+  &-email {
   margin-bottom: 9px;
+
+  &-link {
+  color: $text-color;
+  transition-property: all;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+}
+
+&-tel-link {
+  color: $text-color;
+  transition-property: all;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+}
+
+
+
+
 .city-adress {
   margin-bottom: 9px;
-  color: var(--text-color);
+  color: $text-color;
 }
 
-.footer-email-link {
-  color: var(--text-color);
-  transition-property: all;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.footer-tel-link {
-  color: var(--text-color);
-  transition-property: all;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
 
 .footer-social-list {
   display: flex;
@@ -53,15 +56,8 @@
   justify-content: center;
   border-radius: 50%;
 }
-.footer-links:hover,
-.footer-links:focus {
-  background-color: var(--accent-color);
-}
 
-.footer-links:hover .footer-links-svg,
-.footer-links:focus .footer-links-svg {
-  background-color: var(--accent-color);
-}
+
 
 .footer-links {
   display: flex;
@@ -74,9 +70,8 @@
   transition-property: all;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.footer-links-text {
+  .&-text {
   margin-bottom: 20px;
   width: 146.41px;
   font-weight: bold;
@@ -86,12 +81,23 @@
   text-transform: uppercase;
   color: #ffffff;
 }
-.footer-links-svg {
-  fill: var(--text-color);
+ &-svg {
+  fill: $text-color;
   transition-property: all;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+&:hover,
+&:focus {
+  background-color: $accent-color;
+}
+&:hover .footer-links-svg,
+&:focus .footer-links-svg {
+  background-color: $accent-color;
+}
+}
+
+
 .footer-social-links-item:not(:last-child) {
   margin-right: 10px;
 }
@@ -144,15 +150,17 @@
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   background-color: #212121;
-}
-.footer-submit-btn:hover {
-  background-color: var(--accent-color);
-  transition-property: all;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  cursor: pointer;
-}
-.footer-submit-btn-svg {
+
+  &:hover {
+    background-color: $accent-color;
+    transition-property: all;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    cursor: pointer;
+  }
+  &-svg {
   width: 24px;
   height: 24px;
+
 }
+
