--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -29,20 +29,20 @@
   background-color: #ffffff;
   border-radius: 50%;
   cursor: pointer;
+
+  &:hover .close-btn-svg {
+    fill: $accent-color;
+    transition-property: all;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  &-svg {
+    width: 18px;
+    height: 18px;
+  }
 }
 
-.close-btn:hover .close-btn-svg {
-  fill: var(--accent-color);
-
-  transition-property: all;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.close-btn-svg {
-  width: 18px;
-  height: 18px;
-}
 .is-hidden {
   opacity: 0;
   visibility: hidden;
@@ -53,34 +53,71 @@
 .modal-form {
   display: flex;
   flex-direction: column;
-}
-.modal-form-input {
-  display: block;
-  width: 100%;
-  height: 40px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  margin-bottom: 10px;
-  padding-left: 42px;
-}
-.modal-form-message {
-  height: 120px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  resize: none;
-  margin-bottom: 20px;
-  padding: 12px 16px;
-}
-.modal-form-policy {
-  margin-bottom: 30px;
-}
-.modal-form-description {
-  font-size: 12px;
-  line-height: 0.333;
-  margin-top: 4px;
-  letter-spacing: 0.01em;
 
-  color: #757575;
+  &-input {
+    display: block;
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    margin-bottom: 10px;
+    padding-left: 42px;
+
+    &:focus {
+      outline: none;
+      border: 1px solid #2196f3;
+    }
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
+
+  &-message {
+    height: 120px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    resize: none;
+    margin-bottom: 20px;
+    padding: 12px 16px;
+
+    &:focus {
+      outline: none;
+      border: 1px solid #2196f3;
+    }
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
+
+  &-policy {
+    margin-bottom: 30px;
+  }
+
+  &-description {
+    font-size: 12px;
+    line-height: 0.333;
+    margin-top: 4px;
+    letter-spacing: 0.01em;
+
+    color: #757575;
+  }
+
+  &-text {
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121;
+    margin-bottom: 12px;
+  }
+
+  &-field-wrapper {
+    display: block;
+    position: relative;
+    margin-top: 10px;
+  }
 }
 
 .modal-form-btn {
@@ -93,30 +130,20 @@
   font-size: 16px;
   line-height: 1.875;
   letter-spacing: 0.06em;
-
-  color: #ffffff;
-  background-color: var(--accent-color);
+  color: $text-color;
+  background-color: $accent-color;
 
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-}
 
-.modal-form-btn:hover {
-  cursor: pointer;
-  background: #188ce8;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  transition-property: all;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-form-text {
-  font-size: 20px;
-  line-height: 1.15;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: #212121;
-  margin-bottom: 12px;
+  &:hover {
+    cursor: pointer;
+    background: #188ce8;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    transition-property: all;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 
 .modal-form-svg-icon {
@@ -124,19 +151,12 @@
   top: 50%;
   left: 12px;
   transform: translateY(-50%);
+
+  .modal-form-input:focus + & {
+    fill: #2196f3;
+  }
 }
-.modal-form-input:focus,
-.modal-form-message:focus {
-  outline: none;
-  border: 1px solid #2196f3;
-}
-.modal-form-input:hover,
-.modal-form-message:hover {
-  cursor: pointer;
-}
-.modal-form-input:focus + .modal-form-svg-icon {
-  fill: #2196f3;
-}
+
 .user-message-description {
   font-size: 12px;
   line-height: 0.333;
@@ -146,26 +166,21 @@
   margin-bottom: 8px;
 }
 
-.modal-form-field-wrapper {
-  display: block;
-  position: relative;
-  margin-top: 10px;
-}
-.modal-form-polisy-label::before {
-  display: inline-block;
-  content: '';
-  width: 16px;
-  height: 15px;
-  outline: 0.2px solid #757575;
-  margin-right: 9px;
-}
-
 .modal-form-polisy-label {
   margin-bottom: 30px;
   font-size: 14px;
   line-height: 1.714;
   letter-spacing: 0.03em;
   color: #757575;
+
+  &::before {
+    display: inline-block;
+    content: '';
+    width: 16px;
+    height: 15px;
+    outline: 0.2px solid #757575;
+    margin-right: 9px;
+  }
 }
 
 .modal-form-policy:checked + .modal-form-polisy-label::before {
