--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -7,14 +7,12 @@
   display: flex;
   justify-content: center;
   margin-bottom: 50px;
+
+  &-item {
+    margin-right: 8px;
+  }
 }
 
-.buttons-list-item {
-  margin-right: 8px;
-}
-.portfolio-discription-list:not(:nth-last-child(-n + 3)) {
-  margin-bottom: 30px;
-}
 .portfolio-discription-list {
   position: relative;
   background: #ffffff;
@@ -23,11 +21,14 @@
   transition-property: all;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.portfolio-discription-list:hover {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
+  &:not(:nth-last-child(-n + 3)) {
+    margin-bottom: 30px;
+  }
+  &:hover {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
 }
 
 .modal-btn-portfolio {
@@ -44,12 +45,12 @@
   transition-property: all;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.modal-btn-portfolio:hover,
-.modal-btn-portfolio:focus {
-  color: #ffffff;
-  background-color: var(--accent-color);
+  &:hover,
+  &:focus {
+    color: #ffffff;
+    background-color: $accent-color;
+  }
 }
 
 .portfolio-item {
@@ -93,22 +94,24 @@
 .overlay {
   position: relative;
   overflow: hidden;
+
+  &-description {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 370px;
+    height: 294px;
+    padding: 63px 23px;
+    font-size: 18px;
+    line-height: 1.555;
+    letter-spacing: 0.03em;
+    color: #ffffff;
+    background: rgba(33, 150, 243, 0.9);
+    transform: translateY(100%);
+    transition-property: all;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 
-.overlay-description {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 370px;
-  height: 294px;
-  padding: 63px 23px;
-  font-size: 18px;
-  line-height: 1.555;
-  letter-spacing: 0.03em;
-  color: #ffffff;
-  background: rgba(33, 150, 243, 0.9);
-  transform: translateY(100%);
-  transition-property: all;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
+
