--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,8 +1,6 @@
-:root {
-  --primary-text-color: #212121;
-  --discription-text-color: #757575;
-  --accent-color: #2196f3;
-  --text-color: #ffffff;
-  --footer-background: #2f303a;
-  --icons-links-color: #afb1b8;
-}
+$primary-text-color: #212121;
+$discription-text-color: #757575;
+$accent-color: #2196f3;
+$text-color: #ffffff;
+$footer-background: #2f303a;
+$icons-links-color: #afb1b8;
